name:                gh-stats
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/acamino/gh-stats#readme
license:             BSD3
license-file:        LICENSE
author:              Agustin Camino
maintainer:          agustin.camino@gmail.com
copyright:           Copyright (c) 2016 Agustin Camino
category:            Parsers
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gh-stats
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , req
