name:                github-stats
version:             0.0.1.0
synopsis:            Fetch stats form GitHub organization
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Agustin Camino <agustin.camino@gmail.com>
maintainer:          Agustin Camino <agustin.camino@gmail.com>
stability:           Experimental
copyright:           Copyright (c) 2017 Agustin Camino
category:            Console
Build-type:          Simple
Homepage:            https://github.com/acamino/github-stats
Bug-reports:         https://github.com/acamino/github-stats/issues
cabal-version:       >=1.10
extra-doc-files:     README.md

source-repository head
  type:               git
  location:           https://github.com/acamino/github-stats.git

library
  hs-source-dirs:      src
  exposed-modules:     Console.GitHubStats
                     , Console.GitHubStats.Stats
                     , Console.GitHubStats.Types
  build-depends:       base                   >= 4.7   && < 5.0
                     , aeson                  >= 0.9   && < 1.4
                     , req                    >= 0.2   && < 1.2
                     , text                   >= 1.2   && < 1.3

  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

executable github-stats
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base                   >= 4.7   && < 5.0
                     , aeson                  >= 0.9   && < 1.4
                     , github-stats
                     , optparse-applicative   >= 0.11  && < 0.15
                     , req                    >= 0.2   && < 1.2
                     , text                   >= 1.2   && < 1.3

  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite github-stats-test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Console.GitHubStats.StatsSpec
                       Console.GitHubStatsSpec

  build-depends:       base                   >= 4.7   && < 5.0
                     , aeson                  >= 0.9   && < 1.4
                     , github-stats
                     , hspec
                     , optparse-applicative   >= 0.11  && < 0.15
                     , req                    >= 0.2   && < 1.2
                     , text                   >= 1.2   && < 1.3

  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
